# requests-rs

./: .gitlab-ci.yml  .travis.yml  Cargo.toml  LICENSE-MIT  README.md
src/: lib.rs  request.rs  response.rs  tojson.rs
src/requests/: mod.rs  request.rs  response.rs
tests/: lib.rs
