[package]
authors = ["Cyril Plisko <cyril.plisko@mountall.com>"]
description = "Rust HTTP client API styled after awesome Python requests - [WORK IN PROGRESS]"
documentation = "https://docs.rs/requests"
homepage = "https://gitlab.com/imp/requests-rs"
keywords = ["http", "rest", "client", "python", "requests"]
license = "MIT"
name = "requests"
readme = "README.md"
repository = "https://gitlab.com/imp/requests-rs.git"
version = "0.0.25"

[dependencies]
mime = "0.2.2"

[dependencies.hyper]
version = "0.10"

[dependencies.json]
version = "0.11"


[features]
#default = ["ssl"]
#ssl = ["hyper/ssl"]
