[package]
authors = ["Cyril Plisko <cyril.plisko@mountall.com>"]
categories = ["web-programming::http-client"]
description = "Rust HTTP client API styled after awesome Python requests - [WORK IN PROGRESS]"
documentation = "https://docs.rs/requests"
homepage = "https://gitlab.com/imp/requests-rs"
keywords = ["http", "rest", "client", "python", "requests"]
license = "MIT"
name = "requests"
readme = "README.md"
repository = "https://gitlab.com/imp/requests-rs.git"
version = "0.0.30"

[badges]
travis-ci = { repository = "imp/requests-rs" }
gitlab = { repository = "imp/requests-rs" }

[dependencies]
reqwest = "0.7"
serde = "1.0"
serde_json = "1.0"

[dev-dependencies]
